[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "greetest"
version = "0.0.1"
authors = [
  { name="Arpit Soni", email="harshit998ops@gmail.com" },
]
description = "A small example package for great"
readme = "README.md"
requires-python = ">=3.1"
dependencies = ['opencv-contrib-python']
keywords = ['greet']
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"