[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greet-"
version = "0.1.0"
description = "A greeting package"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Arpit Soni" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
include = ["greet*"]
