[metadata]
name = greet_package_updated
version = 0.0.1
author = Arpit Soni
author_email = your-email@example.com
description = A simple greeting package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Arpitsoni89/greet-
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
include =
    greet*
exclude =
    tests*
    version*
